--- a/.github/workflows/Hanwckf_4.4_kernal_CI.yml
+++ b/.github/workflows/Hanwckf_4.4_kernal_CI.yml
@@ -28,12 +28,8 @@ jobs:
     strategy:
       matrix:
         include:
-          - build_variant: "mt7621"
-            targets: "K2P_nano K2P DIR-878 CR660x JCG-Q20"
           - build_variant: "mt7621-usb-1"
-            targets: "XY-C1 JCG-836PRO JCG-Y2"
-          - build_variant: "mt7621-usb-2"
-            targets: "DIR-882 JCG-AC860M NETGEAR-BZV MI-R3P"
+            targets: "XY-C1"
     steps:
       - name: Checkout main            # 导入主分支
         uses: actions/checkout@v2
